--- a/languages/lazaruside.ja.po
+++ b/languages/lazaruside.ja.po
@@ -14910,13 +14910,21 @@ msgid "Open the file as normal source"
 msgstr "通常のソースとしてファイルを開く"
 
 #: lazarusidestrconsts.lisopenthepackage
-#, object-pascal-format
-msgid "Open the package %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the package %s?"
+msgid ""
+"Open the package \"%s\"?\n"
+"\n"
+"The \"Package\" menu has separate commands for opening packages and a list of recent ones."
 msgstr "パッケージ %s を開きますか？"
 
 #: lazarusidestrconsts.lisopentheproject
-#, object-pascal-format
-msgid "Open the project %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the project %s?"
+msgid ""
+"Open the project \"%s\"?\n"
+"\n"
+"The \"Project\" menu has separate commands for opening projects and a list of recent ones."
 msgstr "プロジェクト %s を開きますか？"
 
 #: lazarusidestrconsts.lisopentooloptions
