--- a/languages/lazaruside.he.po
+++ b/languages/lazaruside.he.po
@@ -15471,13 +15471,21 @@ msgid "Open the file as normal source"
 msgstr "פתח את הקובץ כקוד מקור נורמאלי"
 
 #: lazarusidestrconsts.lisopenthepackage
-#, object-pascal-format
-msgid "Open the package %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the package %s?"
+msgid ""
+"Open the package \"%s\"?\n"
+"\n"
+"The \"Package\" menu has separate commands for opening packages and a list of recent ones."
 msgstr "האם לפתוח את החבילה %s?"
 
 #: lazarusidestrconsts.lisopentheproject
-#, object-pascal-format
-msgid "Open the project %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the project %s?"
+msgid ""
+"Open the project \"%s\"?\n"
+"\n"
+"The \"Project\" menu has separate commands for opening projects and a list of recent ones."
 msgstr "האם לפתוח את הפרויקט %s?"
 
 #: lazarusidestrconsts.lisopentooloptions
