--- a/languages/lazaruside.hu.po
+++ b/languages/lazaruside.hu.po
@@ -14750,13 +14750,21 @@ msgid "Open the file as normal source"
 msgstr "Fájl megnyitása normál forrásként"
 
 #: lazarusidestrconsts.lisopenthepackage
-#, object-pascal-format
-msgid "Open the package %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the package %s?"
+msgid ""
+"Open the package \"%s\"?\n"
+"\n"
+"The \"Package\" menu has separate commands for opening packages and a list of recent ones."
 msgstr "Megnyitja a(z) %s csomagot?"
 
 #: lazarusidestrconsts.lisopentheproject
-#, object-pascal-format
-msgid "Open the project %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the project %s?"
+msgid ""
+"Open the project \"%s\"?\n"
+"\n"
+"The \"Project\" menu has separate commands for opening projects and a list of recent ones."
 msgstr "Megnyitja a(z) %s projektet?"
 
 #: lazarusidestrconsts.lisopentooloptions
