--- a/languages/lazaruside.it.po
+++ b/languages/lazaruside.it.po
@@ -15007,13 +15007,21 @@ msgid "Open the file as normal source"
 msgstr "Apri il file come sorgente normale"
 
 #: lazarusidestrconsts.lisopenthepackage
-#, object-pascal-format
-msgid "Open the package %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the package %s?"
+msgid ""
+"Open the package \"%s\"?\n"
+"\n"
+"The \"Package\" menu has separate commands for opening packages and a list of recent ones."
 msgstr "Aprire il pacchetto %s?"
 
 #: lazarusidestrconsts.lisopentheproject
-#, object-pascal-format
-msgid "Open the project %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the project %s?"
+msgid ""
+"Open the project \"%s\"?\n"
+"\n"
+"The \"Project\" menu has separate commands for opening projects and a list of recent ones."
 msgstr "Aprire il progetto %s?"
 
 #: lazarusidestrconsts.lisopentooloptions
