--- a/languages/lazaruside.lt.po
+++ b/languages/lazaruside.lt.po
@@ -14947,13 +14947,21 @@ msgid "Open the file as normal source"
 msgstr "Failą įkelti kaip įprastą pirminį kodą"
 
 #: lazarusidestrconsts.lisopenthepackage
-#, object-pascal-format
-msgid "Open the package %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the package %s?"
+msgid ""
+"Open the package \"%s\"?\n"
+"\n"
+"The \"Package\" menu has separate commands for opening packages and a list of recent ones."
 msgstr "Atverti paketą %s?"
 
 #: lazarusidestrconsts.lisopentheproject
-#, object-pascal-format
-msgid "Open the project %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the project %s?"
+msgid ""
+"Open the project \"%s\"?\n"
+"\n"
+"The \"Project\" menu has separate commands for opening projects and a list of recent ones."
 msgstr "Atverti projektą %s?"
 
 #: lazarusidestrconsts.lisopentooloptions
