--- a/languages/lazaruside.sk.po
+++ b/languages/lazaruside.sk.po
@@ -14702,13 +14702,21 @@ msgid "Open the file as normal source"
 msgstr "Otvoriť súbor ako bežný zdrojový kód"
 
 #: lazarusidestrconsts.lisopenthepackage
-#, object-pascal-format
-msgid "Open the package %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the package %s?"
+msgid ""
+"Open the package \"%s\"?\n"
+"\n"
+"The \"Package\" menu has separate commands for opening packages and a list of recent ones."
 msgstr "Otvoriť balíček %s?"
 
 #: lazarusidestrconsts.lisopentheproject
-#, object-pascal-format
-msgid "Open the project %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the project %s?"
+msgid ""
+"Open the project \"%s\"?\n"
+"\n"
+"The \"Project\" menu has separate commands for opening projects and a list of recent ones."
 msgstr "Otvoriť projekt %s?"
 
 #: lazarusidestrconsts.lisopentooloptions
