--- a/languages/lazaruside.uk.po
+++ b/languages/lazaruside.uk.po
@@ -14709,13 +14709,21 @@ msgid "Open the file as normal source"
 msgstr "Відкрити файл як текст програми"
 
 #: lazarusidestrconsts.lisopenthepackage
-#, object-pascal-format
-msgid "Open the package %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the package %s?"
+msgid ""
+"Open the package \"%s\"?\n"
+"\n"
+"The \"Package\" menu has separate commands for opening packages and a list of recent ones."
 msgstr "Відкрити пакунок %s"
 
 #: lazarusidestrconsts.lisopentheproject
-#, object-pascal-format
-msgid "Open the project %s?"
+#, object-pascal-format, fuzzy
+#| msgid "Open the project %s?"
+msgid ""
+"Open the project \"%s\"?\n"
+"\n"
+"The \"Project\" menu has separate commands for opening projects and a list of recent ones."
 msgstr "Відкрити проєкт %s"
 
 #: lazarusidestrconsts.lisopentooloptions
