--- a/languages/lazaruside.ru.po
+++ b/languages/lazaruside.ru.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: lazaruside\n"
 "POT-Creation-Date: \n"
-"PO-Revision-Date: 2025-02-04 16:11+0300\n"
+"PO-Revision-Date: 2025-02-04 17:09+0300\n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
 "Language: ru\n"
@@ -14621,7 +14621,7 @@ msgid ""
 "\n"
 "The \"Package\" menu has separate commands for opening packages and a list of recent ones."
 msgstr ""
-"Открыть пакет %s?\n"
+"Открыть пакет \"%s\"?\n"
 "\n"
 "Меню \"Пакет\" содержит отдельные команды для открытия пакетов и список недавних."
 
@@ -14632,7 +14632,7 @@ msgid ""
 "\n"
 "The \"Project\" menu has separate commands for opening projects and a list of recent ones."
 msgstr ""
-"Открыть проект %s?\n"
+"Открыть проект \"%s\"?\n"
 "\n"
 "Меню \"Проект\" содержит отдельные команды для открытия проектов и список недавних."
 
