replaced url http://wiki.freepascal.org with https

--- a/components/onlinepackagemanager/languages/opkman_const.fr.po
+++ b/components/onlinepackagemanager/languages/opkman_const.fr.po
@@ -878,7 +878,9 @@ msgid "Help"
 msgstr "Aide"
 
 #: opkman_const.rsmainfrm_tbhelp_hint
-msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
+#, fuzzy
+#| msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
+msgid "Help (https://wiki.freepascal.org/Online_Package_Manager)"
 msgstr "Aide (http://wiki.freepascal.org/Online_Package_Manager)"
 
 #: opkman_const.rsmainfrm_tbinstall_caption
