--- a/components/onlinepackagemanager/languages/opkman_const.pt_BR.po
+++ b/components/onlinepackagemanager/languages/opkman_const.pt_BR.po
@@ -876,7 +876,9 @@ msgid "Help"
 msgstr "Ajuda"
 
 #: opkman_const.rsmainfrm_tbhelp_hint
-msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
+#, fuzzy
+#| msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
+msgid "Help (https://wiki.freepascal.org/Online_Package_Manager)"
 msgstr "Ajuda"
 
 #: opkman_const.rsmainfrm_tbinstall_caption
