--- a/components/onlinepackagemanager/languages/opkman_const.fi.po
+++ b/components/onlinepackagemanager/languages/opkman_const.fi.po
@@ -905,7 +905,9 @@ msgid "Help"
 msgstr "Ohje"
 
 #: opkman_const.rsmainfrm_tbhelp_hint
-msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
+#, fuzzy
+#| msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
+msgid "Help (https://wiki.freepascal.org/Online_Package_Manager)"
 msgstr "Ohje (http://wiki.freepascal.org/Online_Package_Manager)"
 
 #: opkman_const.rsmainfrm_tbinstall_caption
