OpkMan: regenerated translations and updated Russian translation

--- a/components/onlinepackagemanager/languages/opkman_const.de.po
+++ b/components/onlinepackagemanager/languages/opkman_const.de.po
@@ -896,9 +896,9 @@ msgid "Help"
 msgstr "Hilfe"
 
 #: opkman_const.rsmainfrm_tbhelp_hint
-#, fuzzy
+#, object-pascal-format, fuzzy, badformat
 #| msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
-msgid "Help (https://wiki.freepascal.org/Online_Package_Manager)"
+msgid "Help (%s)"
 msgstr "Hilfe (http://wiki.freepascal.org/Online_Package_Manager)"
 
 #: opkman_const.rsmainfrm_tbinstall_caption
