--- a/components/onlinepackagemanager/languages/opkman_const.es.po
+++ b/components/onlinepackagemanager/languages/opkman_const.es.po
@@ -956,9 +956,9 @@ msgid "Help"
 msgstr "Ayuda"
 
 #: opkman_const.rsmainfrm_tbhelp_hint
-#, fuzzy
+#, object-pascal-format, fuzzy, badformat
 #| msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
-msgid "Help (https://wiki.freepascal.org/Online_Package_Manager)"
+msgid "Help (%s)"
 msgstr "Ayuda (http://wiki.freepascal.org/Online_Package_Manager)"
 
 #: opkman_const.rsmainfrm_tbinstall_caption
