--- a/components/onlinepackagemanager/languages/opkman_const.lt.po
+++ b/components/onlinepackagemanager/languages/opkman_const.lt.po
@@ -922,9 +922,9 @@ msgid "Help"
 msgstr "Žinynas"
 
 #: opkman_const.rsmainfrm_tbhelp_hint
-#, fuzzy
+#, object-pascal-format, fuzzy, badformat
 #| msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
-msgid "Help (https://wiki.freepascal.org/Online_Package_Manager)"
+msgid "Help (%s)"
 msgstr "Žinynas (http://wiki.freepascal.org/Online_Package_Manager)"
 
 #: opkman_const.rsmainfrm_tbinstall_caption
