--- a/components/onlinepackagemanager/languages/opkman_const.pt_BR.po
+++ b/components/onlinepackagemanager/languages/opkman_const.pt_BR.po
@@ -876,9 +876,9 @@ msgid "Help"
 msgstr "Ajuda"
 
 #: opkman_const.rsmainfrm_tbhelp_hint
-#, fuzzy
+#, object-pascal-format, fuzzy, badformat
 #| msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
-msgid "Help (https://wiki.freepascal.org/Online_Package_Manager)"
+msgid "Help (%s)"
 msgstr "Ajuda"
 
 #: opkman_const.rsmainfrm_tbinstall_caption
