--- a/components/onlinepackagemanager/languages/opkman_const.ru.po
+++ b/components/onlinepackagemanager/languages/opkman_const.ru.po
@@ -1,15 +1,15 @@
 msgid ""
 msgstr ""
-"Content-Type: text/plain; charset=UTF-8\n"
 "Project-Id-Version: \n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
 "Last-Translator: Maxim Ganetsky <maxkill@mail.ru>\n"
 "Language-Team: \n"
-"MIME-Version: 1.0\n"
-"Content-Transfer-Encoding: 8bit\n"
 "Language: ru\n"
-"X-Generator: Poedit 2.4.3\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.5\n"
 
 #: opkman_const.rsaddrepositorypackagefrm_bcancel_caption
 msgctxt "opkman_const.rsaddrepositorypackagefrm_bcancel_caption"
@@ -877,10 +877,9 @@ msgid "Help"
 msgstr "Справка"
 
 #: opkman_const.rsmainfrm_tbhelp_hint
-#, fuzzy
-#| msgid "Help (http://wiki.freepascal.org/Online_Package_Manager)"
-msgid "Help (https://wiki.freepascal.org/Online_Package_Manager)"
-msgstr "Справка (http://wiki.freepascal.org/Online_Package_Manager)"
+#, object-pascal-format
+msgid "Help (%s)"
+msgstr "Справка (%s)"
 
 #: opkman_const.rsmainfrm_tbinstall_caption
 msgid "Install"
