IDE: regenerated translations and updated Russian translation

--- a/languages/lazaruside.ca.po
+++ b/languages/lazaruside.ca.po
@@ -3535,7 +3535,8 @@ msgstr ""
 msgid "Indent width"
 msgstr ""
 
-#: lazarusidestrconsts.dlgoptwordwrapindentisoffest
+#: lazarusidestrconsts.dlgoptwordwrapindentisoffset
+msgctxt "lazarusidestrconsts.dlgoptwordwrapindentisoffset"
 msgid "Indent relative to text"
 msgstr ""
 
