--- a/languages/lazaruside.it.po
+++ b/languages/lazaruside.it.po
@@ -3577,7 +3577,8 @@ msgstr ""
 msgid "Indent width"
 msgstr ""
 
-#: lazarusidestrconsts.dlgoptwordwrapindentisoffest
+#: lazarusidestrconsts.dlgoptwordwrapindentisoffset
+msgctxt "lazarusidestrconsts.dlgoptwordwrapindentisoffset"
 msgid "Indent relative to text"
 msgstr ""
 
