--- a/languages/lazaruside.nl.po
+++ b/languages/lazaruside.nl.po
@@ -3541,7 +3541,8 @@ msgstr ""
 msgid "Indent width"
 msgstr ""
 
-#: lazarusidestrconsts.dlgoptwordwrapindentisoffest
+#: lazarusidestrconsts.dlgoptwordwrapindentisoffset
+msgctxt "lazarusidestrconsts.dlgoptwordwrapindentisoffset"
 msgid "Indent relative to text"
 msgstr ""
 
