--- a/languages/lazaruside.tr.po
+++ b/languages/lazaruside.tr.po
@@ -3436,7 +3436,8 @@ msgstr ""
 msgid "Indent width"
 msgstr ""
 
-#: lazarusidestrconsts.dlgoptwordwrapindentisoffest
+#: lazarusidestrconsts.dlgoptwordwrapindentisoffset
+msgctxt "lazarusidestrconsts.dlgoptwordwrapindentisoffset"
 msgid "Indent relative to text"
 msgstr ""
 
