--- a/languages/lazaruside.uk.po
+++ b/languages/lazaruside.uk.po
@@ -3466,7 +3466,8 @@ msgstr ""
 msgid "Indent width"
 msgstr ""
 
-#: lazarusidestrconsts.dlgoptwordwrapindentisoffest
+#: lazarusidestrconsts.dlgoptwordwrapindentisoffset
+msgctxt "lazarusidestrconsts.dlgoptwordwrapindentisoffset"
 msgid "Indent relative to text"
 msgstr ""
 
